Bug Fix: fix card spacing
- remove justify-content: space-between property from content
- add 10px margins to the left and right of each card
- calculate card width factoring in 20px margins

--- a/static/styles.css
+++ b/static/styles.css
@@ -226,7 +226,6 @@ main {
 .content {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
 }
 
 #category_menu_content {
@@ -237,10 +236,10 @@ main {
 
 main article {
 	height: 17em;
-	width: 23%;
+	width: calc(25% - 20px);
 	padding-top: 5px;
-	padding-right: 5px;
-	padding-left: 5px;
+	margin-right: 10px;
+	margin-left: 10px;
 	display: flex;
 	flex-wrap: wrap;
 	margin-bottom: 30px;
@@ -623,7 +622,7 @@ footer h4 {
 
 @media screen and (max-width: 1070px) {
 	main article {
-		width: 48%;
+		width: calc(50% - 20px);
 	}
 }
 
